--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
   <body>
     <div id="wrapper">
       <div id="overlay"></div>
+      <div>
+        <ul>
+          <li id="li_two">
+            <a
+              href="https://github.com/fandomstats/toastystats/blob/master/AO3/AO3DataDump/Fandom-canonical.csv"
+              target="blank"
+              >dataset</a
+            >
+          </li>
+        </ul>
+      </div>
 
       <section class="project__heading">
         <h1>
