--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
         <p id="disclaimer">
           DISCLAIMER: Some fandoms don't have a Wikipedia page so if the the
           information displayed does not seem relevant to the fandom, that
-          maight be the reason why. Wikipedia also doesn't have articles on Real
+          might be the reason why. Wikipedia also doesn't have articles on Real
           Person Fiction (RPF) fandoms so when a fandom does have RPF in the
-          title, the information showing on the page is related to the fandom
+          title, the information showing on the page is most likely related to the fandom
           itself and not the real people. If you want to know who exactly is
           being written about, check it out directly on the
           <a
